--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -11,9 +11,10 @@
     data-strict="0"
     data-reactions-enabled="1"
     data-emit-metadata="0"
-    data-input-position="bottom"
+    data-input-position="top"
     data-theme="preferred_color_scheme"
     data-lang="zh-CN"
+    data-loading="lazy"
     crossorigin="anonymous"
     async>
 </script>
