--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -10,44 +10,36 @@
     font-feature-settings: 'palt';
 }
 
+/* img 通用格式*/
+.general-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
 /* changlog 的 css */
 
-@media(prefers-color-scheme: dark) {
-    .timeline-content::before {
-        content: "";
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        transform: rotate(45deg);
-        background-color: #BCC5CE;
-        left: -10px;
-        top: calc(50% - 10px);
-        box-shadow: var(--md-shadow-z2);
-    }
-    .timeline-card {
-        position: relative;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        min-width: 0;
-        word-wrap: break-word;
-        /* background: linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%), radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
-        background-blend-mode: screen; */
-        background: #C9CCD3;
-        background-image: linear-gradient(-180deg, rgba(255,255,255,0.50) 0%, rgba(0,0,0,0.50) 100%);
-        background-blend-mode: lighten;
-        border-radius: .25rem;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 15px;
-        padding-right: 10px;
-        box-shadow: var(--md-shadow-z1);
-    }
+[data-md-color-scheme="slate"] .timeline-card {
+    background-image: linear-gradient(to right, #262626 0%, #292828 100%);
+    box-shadow: var(--md-shadow-z2);
+}
+[data-md-color-scheme="slate"] .timeline-content::before {
+    background-color: #262626;
+    box-shadow: var(--md-shadow-z2);
+}
+
+[data-md-color-scheme="default"] .timeline-card {
+    background-image: linear-gradient(120deg, #edebeb 0%, #e8e9ea 100%);
+    box-shadow: var(--md-shadow-z2);
+}
+[data-md-color-scheme="default"] .timeline-content::before {
+    background-color: #edebeb;
+    box-shadow: var(--md-shadow-z2);
 }
 
 .changelog-type-newpage {
-    background-color: #4bbe5ce3;
+    background-color: #75CA97;
 }
 
 .changelog-type-newpage::before {
@@ -55,14 +47,14 @@
 }
 
 .changelog-type-pageupdate {
-    background-color: #f7a9a9;
+    background-color: #e69ba5;
 }
 .changelog-type-pageupdate::before {
     content: "页面更新";
 }
 
 .changelog-type-function {
-    background-color: #cca819;
+    background-color: #eac568;
 }
 .changelog-type-function::before {
     content: "功能性更新";
