修复了评论区深浅切换的bug

--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -12,7 +12,7 @@
     data-reactions-enabled="1"
     data-emit-metadata="0"
     data-input-position="top"
-    data-theme="preferred_color_scheme"
+    data-theme="light"
     data-lang="zh-CN"
     data-loading="lazy"
     crossorigin="anonymous"
@@ -36,7 +36,7 @@
       ref.addEventListener("change", function() {
         var palette = __md_get("__palette")
         if (palette && typeof palette.color === "object") {
-          var theme = "light"
+          var theme = palette.color.scheme === "default" ? "light" : "noborder_dark"
 
           /* Instruct Giscus to change theme */
           var frame = document.querySelector(".giscus-frame")
