--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -18,20 +18,43 @@
     width: 75%;
 }
 
-#videoTogetherLoading {
-    touch-action: none;
-    height: 50px;
-    border: 1px solid #c9c8c8;
-    background: #000000;
-    color: #212529;
-    display: flex;
-    align-items: center;
-    z-index: 2147483646;
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    width: 250px;
-    text-align: center;
-    box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d;
-    border-radius: 5px;
+.md-typeset h1,
+.md-typeset h2 {
+    font-weight: 500;
+}
+
+.md-typeset h3 {
+    font-weight: 400;
+}
+
+.md-typeset h1,
+.md-typeset h2,
+.md-typeset h3,
+.md-typeset h4 {
+    letter-spacing: 0;
+}
+
+.md-tabs__link--active,
+.md-tabs__link:is(:focus, :hover) {
+    color: inherit;
+    opacity: 0.8;
+}
+
+.md-typeset details:not([open]) {
+    box-shadow: var(--md-shadow-z2);
+    padding-bottom: 0;
+}
+
+.md-typeset img,
+.md-typeset video {
+    box-shadow: var(--md-shadow-z1);
+    border-radius: 2px;
+}
+
+/* .md-typeset div.arithmatex {
+    overflow-y: hidden;
+} */
+
+.md-typeset :is(.emojione, .twemoji, .gemoji) {
+    vertical-align: sub;
 }
