--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -12,7 +12,7 @@
     data-reactions-enabled="1"
     data-emit-metadata="0"
     data-input-position="top"
-    data-theme="light"
+    data-theme="noborder_light"
     data-lang="zh-CN"
     data-loading="lazy"
     crossorigin="anonymous"
