--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -57,15 +57,8 @@ h1,
     font-weight: 500;
 }
 
-.md-typeset h1,
-.md-typeset h2,
-.md-typeset h3,
-.md-typeset h4 {
-    letter-spacing: 0;
-}
-
 li {
-    line-height: 1.2;
+    line-height: 1.5;
 }
 
 .md-tabs__link--active,
@@ -106,11 +99,11 @@ li {
 
 :root,
 [data-md-color-scheme=default] {
-    --md-default-fg-color: rgba(88, 63, 63, 0.78);
-    --md-default-fg-color--light: rgba(72, 52, 52, .54);
-    --md-default-fg-color--lighter: rgba(72, 52, 52, .32);
-    --md-default-fg-color--lightest: rgba(72, 52, 52, .27);
-    --md-default-bg-color: #faf7f4; 
+    --md-default-fg-color: rgba(49, 37, 32, 1);
+    --md-default-fg-color--light: rgba(59, 47, 42, 0.8);
+    --md-default-fg-color--lighter: rgba(69, 57, 52, 0.6);
+    --md-default-fg-color--lightest: rgba(79, 67, 62, 0.4);
+    --md-default-bg-color: #f0f0f4; 
     --md-default-bg-color--light: hsla(0, 0%, 100%, 0.7);
     --md-default-bg-color--lighter: hsla(0, 0%, 100%, .3);
     --md-default-bg-color--lightest: hsla(0, 0%, 100%, .12);
