--- a/docs/css/admonition.css
+++ b/docs/css/admonition.css
@@ -9,7 +9,7 @@
     margin-top: .9rem;
     opacity: .5;
     font-family: var(--md-text-font-family);
-    font-size: 95%;
+    font-size: 10pt;
 }
 
 /* 自定义 oneko */
