--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -29,7 +29,7 @@
 }
 
 .qiji-combo {
-    font-family: QiJi-Combo, Noto-Serif-SC, serif
+    font-family: QiJi-Combo, 'Noto Serif SC', serif
 }
 
 /* img 通用格式*/
