--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -100,7 +100,7 @@ li {
     --md-default-fg-color--light: rgba(59, 47, 42, 0.8);
     --md-default-fg-color--lighter: rgba(69, 57, 52, 0.6);
     --md-default-fg-color--lightest: rgba(79, 67, 62, 0.4);
-    --md-default-bg-color: #faf7ee; 
+    --md-default-bg-color: #f8f8ff; 
     --md-default-bg-color--light: hsla(0, 0%, 100%, 0.7);
     --md-default-bg-color--lighter: hsla(0, 0%, 100%, .3);
     --md-default-bg-color--lightest: hsla(0, 0%, 100%, .12);
